--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/cors": "^2.8.19",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
@@ -21,6 +22,7 @@
     "@types/multer": "^2.0.0",
     "cloudinary": "^2.7.0",
     "concurrently": "^9.2.1",
+    "cors": "^2.8.5",
     "datauri": "^4.1.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
